tests/unit/default/syntax-error/016-create-table-parens.x.t
---- IN ----
+%table(|
---- OUT ----
---- ERR ----
syntax: expected <columns-definitions-end> after `+%table(` near `|` at position 8 - at line 1
---- EXIT ----
1
